# church-management-system

./: .env.example  .gitignore  README.md  SECURITY.md  USER_GUIDE.md  docker-compose.yml
apps/backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
apps/backend/alembic/: env.py  script.py.mako
apps/backend/alembic/versions/: step10_001_church_members.py  step10_5_001_church_member_indexes.py  step10_6_001_registry_app_user_split.py  step11_001_notifications.py  step12_001_notification_channels_delivery_attempts.py  step14_001_event_reminders.py  step16_001_church_profile.py  step16_002_registration_number_unique.py  step17_001_registry_saved_filters.py  step19_001_audit_logs.py  step20_001_audit_logs_actor_display_name.py  step2_001_initial_users_member_profiles.py  step6_001_ministries.py  step7_001_events.py  step8_001_event_attendance.py  step9_001_volunteers.py
apps/backend/app/: main.py
apps/backend/app/api/: routes.py
apps/backend/app/cli/: __init__.py  backup_db.py  bootstrap_admin.py  reminder_scheduler.py
apps/backend/scripts/: restore_db.sh
apps/backend/tests/: conftest.py  test_attendance.py  test_audit_logs.py  test_auth.py  test_church_profile.py  test_church_registry.py  test_event_reminders.py  test_events.py  test_exports.py  test_members.py  test_members_multi_admin.py  test_ministries.py  test_notifications.py  test_registry_saved_filters.py  test_reminder_scheduler.py  test_reports.py  test_step18_backup_and_security.py  test_users_search.py  test_volunteers.py
(+151 files in other folders)
